// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer className is test_drawer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right test_drawer"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="overflow:auto;height:100%;opacity:0;transition:opacity .3s"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer closable is false 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer destroyOnClose is true 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="overflow:auto;height:100%;opacity:0;transition:opacity .3s"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer have a title 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:256px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="ant-drawer-header"
          >
            <div
              class="ant-drawer-title"
            >
              Test Title
            </div>
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render correctly 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-right"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
          style="overflow:auto;height:100%"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer render top drawer 1`] = `
<div
  class=""
>
  <div
    class="ant-drawer ant-drawer-top"
  >
    <div
      class="ant-drawer-mask"
    />
    <div
      class="ant-drawer-content-wrapper"
      style="transform:translateY(-100%);-ms-transform:translateY(-100%);height:400px"
    >
      <div
        class="ant-drawer-content"
      >
        <div
          class="ant-drawer-wrapper-body"
        >
          <div
            class="ant-drawer-header-no-title"
          >
            <button
              aria-label="Close"
              class="ant-drawer-close"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </button>
          </div>
          <div
            class="ant-drawer-body"
          >
            Here is content of Drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
